[gd_scene load_steps=6 format=3 uid="uid://o47pxp8rypel"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_q23yu"]
[ext_resource type="Texture2D" uid="uid://c31hj0c1cmsuq" path="res://icon.svg" id="1_wrex3"]
[ext_resource type="PackedScene" uid="uid://dtr7u42wps8dk" path="res://HealthBar/health_bar.tscn" id="3_s8imy"]
[ext_resource type="Script" path="res://Player/armor_bar.gd" id="4_gvwii"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xwv8d"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
rotation = 1.5708
collision_mask = 7
motion_mode = 1
script = ExtResource("1_q23yu")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_wrex3")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xwv8d")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("3_s8imy")]
offset_left = -20.0
offset_top = 5.00006
offset_right = 200.0

[node name="ArmorBar" parent="." instance=ExtResource("3_s8imy")]
offset_left = -16.0
offset_top = 5.00006
offset_right = 204.0
script = ExtResource("4_gvwii")

[node name="ArmorRegen" type="Timer" parent="."]

[node name="ArmorRegenDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ArmorRegen" to="." method="_on_armor_regen_timeout"]
